--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "sweetalert2": "^11.10.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
